Update to target Java 11